syntax = "proto3";

package app.v1alpha1;

option go_package = "api/app/v1alpha1;v1alpha1";

message MetaData {
      string name = 1;
      string namespace = 2;
      map<string,string> labels = 3;
}

message AppV1alpha1 {
      string apiVersion = 1;
      string kind = 2;
      MetaData metaData = 3;
      App spec = 4;
}

message Apps {
      repeated App apps = 1;
}

message ClusterID {
      int32 clusterID = 1;
}

message AppID {
      int32 clusterID = 1;
      int32 appID = 2;
}

message App {
      int32 id = 1;
      string name = 2;
      string repoName = 3;
      string repoUrl = 4;
      string chartName = 5;
      string version = 6;
      string config = 7;
      string secret = 8;
      string namespace = 9;
      int32 clusterID = 10;
}